# flutter_network_image_dimension

./: README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/image_dimension_finder_flutter/: ImageDimensionFinderFlutterPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/image_dimension_finder_flutter_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: image_dimension_finder_flutter.podspec
ios/Classes/: ImageDimensionFinderFlutterPlugin.h  ImageDimensionFinderFlutterPlugin.m  SwiftImageDimensionFinderFlutterPlugin.swift  bridge_generated.h
ios/ImageDimensionFetcherLib.xcframework/: Info.plist
lib/: bridge_generated.dart  image_dimension_finder_flutter.dart
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: api.rs  bridge_generated.rs  buf_data.rs  lib.rs
test/: image_dimension_finder_flutter_test.dart
