[package]
name = "image_dimension_fetcher_lib"
version = "0.1.0"
edition = "2021"


[lib]
name = "image_dimension_fetcher_lib"
crate-type = ["cdylib","staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
reqwest = {version= "0.11.10", features=["blocking"]}
anyhow = "1"
flutter_rust_bridge = "1.31.0"

[unstable]
build-std = [
    "core",
    "compiler_builtins"
]

[target.'cfg(target_os = "android" )'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = 3
lto = true